Changed yml again

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,19 @@
-language: c
-sudo: false
-cache:
-  directories:
-    - ~/arduino_ide
-    - ~/.arduino15/packages/
-git:
-  depth: false
-  quiet: true
-
-before_install:
-   - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
-
-install:
-   - arduino --install-library "Smartcar shield"
-
-script:
-   - build esp32
+    language: c
+    before_install:
+      - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_1.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :1 -ac -screen 0 1280x1024x16"
+      - sleep 3
+      - export DISPLAY=:1.0
+      - wget http://downloads.arduino.cc/arduino-1.6.5-linux64.tar.xz
+      - tar xf arduino-1.6.5-linux64.tar.xz
+      - sudo mv arduino-1.6.5 /usr/local/share/arduino
+      - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
+      - mkdir $HOME/.arduino15
+      - wget http://downloads.arduino.cc/libraries/library_index.json -O $HOME/.arduino15/library_index.json
+    install:
+      - arduino --install-library "Smartcar shield"
+    script:
+      - arduino --verify --board arduino:avr:esp32 $PWD/SmartCar/SmartCar.ino
+    notifications:
+      email:
+        on_success: change
+        on_failure: change
