Added back install actions to yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@
     before_install:
       - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
     install:
+      - arduino --install-library "ESP32 AnalogWrite"
+      - arduino --install-library "ServoESP32"
       - arduino --install-library "Smartcar shield"
     script:
       - build_platform esp32
