Added VL53L0X library to Travis
Co-authored-by: Hugo Hempel <hugohhempel@gmail.com>
Co-authored-by: Hjalmar Thunberg <hjalmar.thunberg@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@
       - arduino --install-library "ESP32 AnalogWrite"
       - arduino --install-library "ServoESP32"
       - arduino --install-library "Smartcar shield"
+      - arduino --install-library "VL53L0X"
     script:
       - build_platform esp32
     notifications:
