--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "org.jetbrains.anko:anko-common:0.8.3"
+    implementation 'me.aflak.libraries:bluetooth:1.3.4'
 }
