--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,40 @@
-    language: c
-    before_install:
-      - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
-    install:
-      - arduino --install-library "ESP32 AnalogWrite"
-      - arduino --install-library "ServoESP32"
-      - arduino --install-library "Smartcar shield"
-    script:
-      - build_platform esp32
-    notifications:
-      email:
-        on_success: change
-        on_failure: change
+matrix:
+  include:
+
+    - language: c
+      before_install:
+        - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
+      install:
+        - arduino --install-library "ESP32 AnalogWrite"
+        - arduino --install-library "ServoESP32"
+        - arduino --install-library "Smartcar shield"
+      script:
+        - build_platform esp32
+
+    - language: android
+      dist: trusty
+      jdk: oraclejdk9
+      before_cache:
+        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+      cache:
+        directories:
+          - $HOME/.gradle/caches/
+          - $HOME/.gradle/wrapper/
+          - $HOME/.android/build-cache
+      android:
+        # Emulator Management: Create, Start and Wait
+        before_script:
+          - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+          - emulator -avd test -no-audio -no-window &
+          - android-wait-for-emulator
+          - adb shell input keyevent 82 &
+
+        script:
+          - cd $TRAVIS_BUILD_DIR/app
+          - ./gradlew build
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
