--- a/.travis.yml
+++ b/.travis.yml
@@ -23,16 +23,19 @@ matrix:
           - $HOME/.gradle/wrapper/
           - $HOME/.android/build-cache
       android:
-        # Emulator Management: Create, Start and Wait
-        before_script:
-          - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-          - emulator -avd test -no-audio -no-window &
-          - android-wait-for-emulator
-          - adb shell input keyevent 82 &
+        components:
+        - tools
+        - build-tools-29.0.3
+      # Emulator Management: Create, Start and Wait
+      before_script:
+        - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+        - emulator -avd test -no-audio -no-window &
+        - android-wait-for-emulator
+        - adb shell input keyevent 82 &
 
-        script:
-          - cd $TRAVIS_BUILD_DIR/app
-          - ./gradlew build
+      script:
+        - cd $TRAVIS_BUILD_DIR/app
+        - ./gradlew build
 
 notifications:
   email:
