--- a/.travis.yml
+++ b/.travis.yml
@@ -12,32 +12,60 @@ matrix:
         - build_platform esp32
 
     - language: android
-      dist: trusty
-      jdk: oraclejdk9
+      jdk: oraclejdk8
+      # Set environment variables
+      env:
+        global:
+        # Set timeout for the Android emulator to come online
+        - ADB_INSTALL_TIMEOUT=10
+        # Set the minimum Android API to support
+        # Note: Not all of them work well with Travis
+        - ANDROID_TARGET=android-23
       before_cache:
-        - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-        - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+        - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
       cache:
         directories:
-          - $HOME/.gradle/caches/
-          - $HOME/.gradle/wrapper/
-          - $HOME/.android/build-cache
+          # Cache all dirs under .gradle folder
+          - $HOME/.gradle/daemon       # Cache daemon logs
+          - $HOME/.gradle/native       # Cache library downloaded from the gradle dependency
+          - $HOME/.gradle/wrapper      # Cache the gradle
+          # Try to reuse previously downloaded Arduino resources
+          - $HOME/arduino_ide          # Cache Arduino IDE
+          - $HOME/.arduino15/packages/ # Cache Arduino IDE packages
       android:
         components:
-        - tools
-        - platform-tools
-        - build-tools-29.0.3
-      # Emulator Management: Create, Start and Wait
-      before_script:
-        - android list targets
-        - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
-        - emulator -avd test -no-audio -no-window &
-        - android-wait-for-emulator
-        - adb shell input keyevent 82 &
-
-      script:
-        - cd $TRAVIS_BUILD_DIR/app
-        - ./gradlew build
+          - tools # to get the new `repository-11.xml`
+          - platform-tools
+          - build-tools-29.0.3
+          - $ANDROID_TARGET # Our minimum Android version
+          - sys-img-armeabi-v7a-$ANDROID_TARGET
+          - extra-android-m2repository
+          - extra-google-m2repository
+        before_script:
+          # Launch Android emulator to run the instrumented tests
+          - android list targets
+          - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi armeabi-v7a # Create AVD for given api
+          - emulator -avd test -no-audio -no-window & # Start emulator
+          - android-wait-for-emulator
+          - adb devices # Display list of devices
+          - adb shell input keyevent 82 &
+          # Set `gradlew` as executable
+           chmod +x $TRAVIS_BUILD_DIR/carMobileApp/gradlew
+        before_install:
+          # Install Android 9 SDK and accept its user agreement
+          - echo yes | sdkmanager "platforms;android-29"
+        install:
+          # Install Smartcar shield library (used by our sketch)
+          - arduino --install-library "Smartcar shield"
+        script:
+          # Build the Android app
+          - cd $TRAVIS_BUILD_DIR/carMobileApp
+          - ./gradlew build --stacktrace
+          # Run the Android app's unit tests
+          - ./gradlew test --info
+          - ./gradlew connectedCheck
+          # Run the Android app's instrumented tests
+          - ./gradlew connectedAndroidTest
 
 notifications:
   email:
