--- a/.travis.yml
+++ b/.travis.yml
@@ -13,23 +13,23 @@ matrix:
 
     - language: android
       dist: trusty
-      jdk: oraclejdk8
       before_cache:
         - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
         - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
       cache:
         directories:
-          - $HOME/.gradle/daemon
-          - $HOME/.gradle/native
-          - $HOME/.android/wrapper
+          - $HOME/.gradle/caches/
+          - $HOME/.gradle/wrapper/
+          - $HOME/.android/build-cache
       android:
         components:
         - tools
         - platform-tools
         - build-tools-29.0.3
+        - android-29
       before_script:
         - android list targets
-        - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
+        - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
         - emulator -avd test -no-audio -no-window &
         - android-wait-for-emulator
         - adb devices
