--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,16 @@ matrix:
           - $HOME/.android/build-cache
       android:
         components:
-        - tools
+        - tools # to get the new `repository-11.xml`
         - platform-tools
-        - build-tools-29.0.3
-        - android-29
+        - build-tools-28.0.3
+        - $ANDROID_TARGET # Our minimum Android version
+        - sys-img-armeabi-v7a-$ANDROID_TARGET
+        - extra-android-m2repository
+        - extra-google-m2repository
       before_script:
         - android list targets
-        - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
-        - emulator -avd test -no-audio -no-window &
+        - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi armeabi-v7a
         - android-wait-for-emulator
         - adb devices
         - adb shell input keyevent 82 &
