--- a/.travis.yml
+++ b/.travis.yml
@@ -23,16 +23,15 @@ matrix:
           - $HOME/.android/build-cache
       android:
         components:
-        - tools # to get the new `repository-11.xml`
+        - tools
         - platform-tools
         - build-tools-28.0.3
-        - $ANDROID_TARGET # Our minimum Android version
-        - sys-img-armeabi-v7a-$ANDROID_TARGET
+        - sys-img-armeabi-v7a-$android-22
         - extra-android-m2repository
         - extra-google-m2repository
       before_script:
         - android list targets
-        - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi armeabi-v7a
+        - echo no | android create avd --force -n test -t $android-22 --abi armeabi-v7a
         - android-wait-for-emulator
         - adb devices
         - adb shell input keyevent 82 &
