--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,12 @@ matrix:
         - platform-tools
         - build-tools-28.0.3
         - android-22
+        - sys-img-armeabi-v7a-android-22
         - extra-android-m2repository
         - extra-google-m2repository
       before_script:
         - android list targets
-        - echo no | android create avd --force -n test -t $android-22 --abi armeabi-v7a
+        - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
         - android-wait-for-emulator
         - adb devices
         - adb shell input keyevent 82 &
