--- a/.travis.yml
+++ b/.travis.yml
@@ -27,13 +27,13 @@ matrix:
         - platform-tools
         - build-tools-29.0.3
         - android-29
-        - android-22
-        - sys-img-armeabi-v7a-android-22
+        - android-23
+        - sys-img-armeabi-v7a-android-23
         - extra-android-m2repository
         - extra-google-m2repository
       before_script:
         - android list targets
-        - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+        - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
         - emulator -avd test -no-audio -no-window &
         - android-wait-for-emulator
         - adb devices
@@ -43,8 +43,8 @@ matrix:
         - echo yes | sdkmanager "platforms;android-29"
       script:
         - cd $TRAVIS_BUILD_DIR/app
-        - ./gradlew build
-        - ./gradlew test
+        - ./gradlew build --stacktrace
+        - ./gradlew test --info
         - ./gradlew connectedAndroidTest
 
 notifications:
