--- a/.travis.yml
+++ b/.travis.yml
@@ -2,35 +2,42 @@ matrix:
   include:
 
     - language: c
+
       before_install:
         - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
+
       install:
         - arduino --install-library "ESP32 AnalogWrite"
         - arduino --install-library "ServoESP32"
         - arduino --install-library "Smartcar shield"
+        
       script:
         - build_platform esp32
 
     - language: android
       dist: trusty
+      jdk: oraclejdk8
+
       before_cache:
         - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
         - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
       cache:
         directories:
           - $HOME/.gradle/caches/
           - $HOME/.gradle/wrapper/
           - $HOME/.android/build-cache
+
       android:
         components:
         - tools
         - platform-tools
-        - build-tools-29.0.3
-        - android-29
+        - tools
         - android-23
         - sys-img-armeabi-v7a-android-23
         - extra-android-m2repository
         - extra-google-m2repository
+
       before_script:
         - android list targets
         - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
@@ -39,8 +46,11 @@ matrix:
         - adb devices
         - adb shell input keyevent 82 &
         - chmod +x $TRAVIS_BUILD_DIR/app/gradlew
+        
       before_install:
-        - echo yes | sdkmanager "platforms;android-29"
+        - yes | sdkmanager "platforms;android-29"
+        - yes | sdkmanager "build-tools;29.0.3"
+
       script:
         - cd $TRAVIS_BUILD_DIR/app
         - ./gradlew build --stacktrace
