--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ matrix:
         - arduino --install-library "ESP32 AnalogWrite"
         - arduino --install-library "ServoESP32"
         - arduino --install-library "Smartcar shield"
+        - arduino --install-library "VL53L0X"
         
       script:
         - build_platform esp32
 
     - language: android
       dist: trusty
-      jdk: oraclejdk8
 
       before_cache:
         - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
@@ -33,18 +33,10 @@ matrix:
         - tools
         - platform-tools
         - tools
-        - android-23
-        - sys-img-armeabi-v7a-android-23
         - extra-android-m2repository
         - extra-google-m2repository
 
       before_script:
-        - android list targets
-        - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
-        - emulator -avd test -no-audio -no-window &
-        - android-wait-for-emulator
-        - adb devices
-        - adb shell input keyevent 82 &
         - chmod +x $TRAVIS_BUILD_DIR/app/gradlew
         
       before_install:
@@ -55,7 +47,6 @@ matrix:
         - cd $TRAVIS_BUILD_DIR/app
         - ./gradlew build --stacktrace
         - ./gradlew test --info
-        - ./gradlew connectedAndroidTest
 
 notifications:
   email:
