--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.anko:anko-common:0.8.3"
     implementation 'me.aflak.libraries:bluetooth:1.3.4'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
