--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -37,4 +37,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-common:0.8.3"
     implementation 'me.aflak.libraries:bluetooth:1.3.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.8.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.8.1"
 }
